# Vela

./: .env.example  .gitignore  CLAUDE.md  LICENSE  LOGO_GUIDELINES.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vela_build_guide.md
circuits/: package.json
circuits/circuits/: amount_commitment.circom  kyc_compliance.circom  withdrawal.circom
circuits/scripts/: compile.sh  prove.sh  setup.sh
circuits/test/: circuits.test.js
contracts/: Cargo.toml
contracts/corridor-policy/: Cargo.toml
contracts/corridor-policy/src/: lib.rs
contracts/groth16-verifier/: Cargo.toml
contracts/groth16-verifier/src/: lib.rs  test.rs
contracts/settlement/: Cargo.toml
contracts/settlement/src/: lib.rs  test.rs
docs/: architecture.md  circuits.md  demo-script.md  security-audit.md
frontend/: next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/audit/: page.tsx
frontend/src/app/demo/: page.tsx
frontend/src/app/receive/: page.tsx
frontend/src/app/send/: page.tsx
frontend/src/components/auditor/: AuditStats.tsx  ComplianceSummary.tsx  (+3 more)
frontend/src/context/: WalletContext.tsx
frontend/src/hooks/: useWallet.ts
frontend/src/lib/: env.ts  prover.ts  stellar.ts  utils.ts  viewkey.ts
lib/: package.json  tsconfig.json
lib/src/: index.ts
lib/src/crypto/: bls12_381.ts  merkle.ts  poseidon.ts  viewkey.ts
lib/src/prover/: browser.ts
lib/src/stellar/: client.ts  wallet.ts
lib/src/types/: circomlibjs.d.ts
scripts/: deploy.sh  fund-testnet.sh
(+31 files in other folders)
